pricing page created

--- a/public/index.html
+++ b/public/index.html
@@ -103,12 +103,14 @@
 
           <!-- Navigation -->
           <nav class="hidden md:flex items-center space-x-8">
+            <a href="precos.html"
+              class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
             <a href="#servicos"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Serviços</a>
             <a href="#tecnologias"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Tecnologias</a>
             <a href="#contato"
-              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
+              class="text-gray-700  hover:text-primary-700 font-medium transition-colors">Contato</a>
             <a href="#contato"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Orçamento
@@ -130,12 +132,15 @@
         <div class="md:hidden hidden" id="mobile-menu">
           <div
             class="px-2 pt-2 pb-3 space-y-1 bg-white border-t border-gray-200">
+            <a href="precos.html"
+              class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
+              Ver Preços</a>
             <a href="#servicos"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium">Serviços</a>
+              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Serviços</a>
             <a href="#tecnologias"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium">Tecnologias</a>
+              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Tecnologias</a>
             <a href="#contato"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium">Contato</a>
+              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
             <a href="#contato"
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Solicitar Orçamento
@@ -211,6 +216,13 @@
               <span class="relative z-10"> Ver Serviços</span>
               <div
                 class="absolute inset-0 bg-accent-400 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 origin-left"></div>
+            </a>
+            <a href="precos.html#tab-sites"
+              class="group relative bg-gradient-to-r from-accent-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
+              <i class="fa-solid fa-rocket relative z-10"></i>
+              <span class="relative z-10"> Ver Preços</span>
+              <div
+                class="absolute inset-0 bg-gradient-to-r from-accent-400 to-primary-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
             </a>
           </div>
 
@@ -968,7 +980,7 @@
 
           <!-- Enhanced CTA Button -->
           <a href="mailto:contato@dharmalabs.com.br" target="_blank"
-              rel="noopener noreferrer"
+            rel="noopener noreferrer"
             class="group inline-flex items-center bg-gradient-to-r from-accent-500 to-highlight-600 text-white px-12 py-5 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:shadow-accent-400/30 mb-16 relative overflow-hidden">
             <span class="relative z-10 flex items-center">
               <i
@@ -1098,10 +1110,7 @@
       </div>
     </footer>
 
-    <!-- Scripts -->
     <script src="./assets/js/scripts.js"></script>
-
-    <!-- Dark Mode Three.js -->
     <script src="./assets/js/dark-mode-three.js"></script>
   </body>
 
