refactoring javascript files

--- a/public/index.html
+++ b/public/index.html
@@ -1111,6 +1111,7 @@
     </footer>
 
     <script src="./assets/js/scripts.js"></script>
+    <script src="./assets/js/pricing-config.js"></script>
     <script src="./assets/js/dark-mode-three.js"></script>
   </body>
 
