--- a/public/precos.html
+++ b/public/precos.html
@@ -145,37 +145,37 @@
   </section>
 
   <!-- Navigation Tabs -->
-  <section class="py-2 bg-white sticky top-16 z-40 border-b border-gray-200">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex flex-wrap justify-center gap-2 md:gap-4">
-        <button class="tab-button active px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="sites">
-          <i class="fas fa-globe mr-2"></i>Sites
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="sistemas">
-          <i class="fas fa-cogs mr-2"></i>Sistemas
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="dashboards">
-          <i class="fas fa-chart-bar mr-2"></i>Dashboards
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="apps">
-          <i class="fas fa-mobile-alt mr-2"></i>Apps
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="automacao">
-          <i class="fas fa-robot mr-2"></i>Automação
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="email">
-          <i class="fas fa-envelope mr-2"></i>Email
-        </button>
-        <button class="tab-button px-4 md:px-6 py-3 rounded-full font-semibold transition-all duration-300 text-sm md:text-base" data-tab="consultoria">
-          <i class="fas fa-handshake mr-2"></i>Consultoria
-        </button>
-      </div>
+  <section class="pricing-navigation-tabs">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex flex-wrap justify-center gap-2 md:gap-4">
+      <button class="tab-button active" data-tab="sites">
+        <i class="fas fa-globe mr-2"></i>Sites
+      </button>
+      <button class="tab-button" data-tab="sistemas">
+        <i class="fas fa-cogs mr-2"></i>Sistemas
+      </button>
+      <button class="tab-button" data-tab="dashboards">
+        <i class="fas fa-chart-bar mr-2"></i>Dashboards
+      </button>
+      <button class="tab-button" data-tab="apps">
+        <i class="fas fa-mobile-alt mr-2"></i>Apps
+      </button>
+      <button class="tab-button" data-tab="automacao">
+        <i class="fas fa-robot mr-2"></i>Automação
+      </button>
+      <button class="tab-button" data-tab="email">
+        <i class="fas fa-envelope mr-2"></i>Email
+      </button>
+      <button class="tab-button" data-tab="consultoria">
+        <i class="fas fa-handshake mr-2"></i>Consultoria
+      </button>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Pricing Content -->
-  <section class="py-20 lg:py-28 bg-gray-50">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+  <section class="pricing-content-section py-20 lg:py-28 bg-gray-50">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
 
       <!-- Sites Tab -->
       <div id="tab-sites" class="tab-content active">
@@ -674,6 +674,7 @@
     </div>
   </footer>
 
+  <script src="./assets/js/scripts.js"></script>
   <script src="./assets/js/pricing-config.js"></script>
   <script src="./assets/js/dark-mode-three.js"></script>
 </body>
