adjustment on position links

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
           <!-- Navigation -->
           <nav class="hidden md:flex items-center space-x-8">
             <a href="precos.html"
-              class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
+              class="bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
             <a href="#servicos"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Serviços</a>
             <a href="#tecnologias"
@@ -133,7 +133,7 @@
           <div
             class="px-2 pt-2 pb-3 space-y-1 bg-white border-t border-gray-200">
             <a href="precos.html"
-              class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
+              class="block mx-3 mt-4 bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Ver Preços</a>
             <a href="#servicos"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Serviços</a>
@@ -218,7 +218,7 @@
                 class="absolute inset-0 bg-accent-400 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 origin-left"></div>
             </a>
             <a href="precos.html#tab-sites"
-              class="group relative bg-gradient-to-r from-accent-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
+              class="group relative bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
               <i class="fa-solid fa-rocket relative z-10"></i>
               <span class="relative z-10"> Ver Preços</span>
               <div
