--- a/public/precos.html
+++ b/public/precos.html
@@ -60,7 +60,7 @@
           <nav class="hidden md:flex items-center space-x-8">
             <a href="index.html"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Home</a>
-            <a href="#precos"
+            <a href="#pricing-content"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Preços</a>
             <a href="index.html#contato"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
@@ -87,7 +87,7 @@
             class="px-2 pt-2 pb-3 space-y-1 bg-white border-t border-gray-200">
             <a href="index.html"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Home</a>
-            <a href="#precos"
+            <a href="#pricing-content"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Preços</a>
             <a href="index.html#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
@@ -183,7 +183,7 @@
 
     <!-- Navigation Tabs -->
     <section
-      class="pricing-navigation-tabs sticky top-0 z-40 bg-white/95 backdrop-blur-sm border-b border-gray-200 shadow-sm">
+      id="pricingtabs" class="pricing-navigation-tabs sticky top-0 z-40 bg-white/95 backdrop-blur-sm border-b border-gray-200 shadow-sm">
       <div class="px-4 py-3">
         <!-- Container com scroll horizontal -->
         <div class="relative ">
@@ -229,7 +229,7 @@
     </section>
 
     <!-- Pricing Content -->
-    <section class="pricing-content-section py-20 lg:py-28 bg-gray-50">
+    <section id="pricing-content" class="pricing-content-section py-20 lg:py-28 bg-gray-50">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
 
         <!-- Sites Tab -->
