--- a/public/index.html
+++ b/public/index.html
@@ -203,10 +203,10 @@
           <!-- Enhanced CTA Buttons -->
           <div
             class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-8">
-            <a href="#contato"
-              class="group relative bg-gradient-to-r from-accent-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
+            <a href="precos.html#pricing-content"
+              class="group relative bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
               <i class="fa-solid fa-rocket relative z-10"></i>
-              <span class="relative z-10"> Solicitar Orçamento</span>
+              <span class="relative z-10"> Ver Preços</span>
               <div
                 class="absolute inset-0 bg-gradient-to-r from-accent-400 to-primary-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
             </a>
@@ -217,10 +217,10 @@
               <div
                 class="absolute inset-0 bg-accent-400 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 origin-left"></div>
             </a>
-            <a href="precos.html#tab-sites"
-              class="group relative bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
+            <a href="#contato"
+              class="group relative bg-gradient-to-r from-accent-500 to-primary-600 text-white px-10 py-4 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-1 hover:shadow-2xl hover:shadow-accent-400/30 w-full sm:w-auto text-center overflow-hidden">
               <i class="fa-solid fa-rocket relative z-10"></i>
-              <span class="relative z-10"> Ver Preços</span>
+              <span class="relative z-10"> Solicitar Orçamento</span>
               <div
                 class="absolute inset-0 bg-gradient-to-r from-accent-400 to-primary-500 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
             </a>
