several changes in prices and cta links

--- a/public/index.html
+++ b/public/index.html
@@ -111,9 +111,10 @@
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Tecnologias</a>
             <a href="#contato"
               class="text-gray-700  hover:text-primary-700 font-medium transition-colors">Contato</a>
-            <a href="#contato"
+            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Falar agora
+              <i class="ml-1 fa-brands fa-whatsapp"></i>
             </a>
           </nav>
 
@@ -141,9 +142,10 @@
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Tecnologias</a>
             <a href="#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
-            <a href="#contato"
+            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Falar agora
+              <i class="ml-1 fa-brands fa-whatsapp"></i>
             </a>
           </div>
         </div>
@@ -792,7 +794,7 @@
                   <a href="precos.html#consultoria">
                     <button
                       class="w-full bg-gradient-to-r from-highlight-500 to-primary-600 text-white py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                      Ver preços
+                      Ver mais
                     </button>
                   </a>
                 </div>
@@ -1185,7 +1187,7 @@
               </a>
             </div>
             <div class="block lg:hidden">
-              <a href="https://wa.link/suwtio" target="_blank"
+              <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21" target="_blank"
                 rel="noopener noreferrer"
                 class="group inline-flex items-center bg-gradient-to-r from-accent-500 to-highlight-600 text-white px-12 py-5 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:shadow-accent-400/30 mb-16 relative overflow-hidden">
                 <span class="relative z-10 flex items-center">
@@ -1202,7 +1204,7 @@
             <!-- Contact Methods Grid -->
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-16">
-              <a href="https://wa.link/suwtio" target="_blank"
+              <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21" target="_blank"
                 rel="noopener noreferrer"
                 class="group hidden md:flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2 cursor-pointer">
 
