--- a/public/precos.html
+++ b/public/precos.html
@@ -62,11 +62,12 @@
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Home</a>
             <a href="#pricing-content"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Preços</a>
-            <a href="index.html#contato"
-              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
             <a href="#contato"
+              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
+            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Falar agora
+              <i class="ml-1 fa-brands fa-whatsapp"></i>
             </a>
           </nav>
 
@@ -89,11 +90,12 @@
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Home</a>
             <a href="#pricing-content"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Preços</a>
-            <a href="index.html#contato"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
             <a href="#contato"
+              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
+            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Falar agora
+              <i class="ml-1 fa-brands fa-whatsapp"></i>
             </a>
           </div>
         </div>
@@ -976,7 +978,7 @@
           <!-- Contact Options -->
           <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
             <!-- WhatsApp -->
-            <a id="price-whatsapp" href="https://wa.link/suwtio"
+            <a id="price-whatsapp" href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20tirar%20meu%20sonho%20do%20papel%21" target="_blank" rel="noopener noreferrer"
               class="group bg-gradient-to-r from-accent-500 to-highlight-600 p-8 rounded-3xl hover:from-accent-400 hover:to-highlight-500 transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl">
               <div class="flex items-center justify-center mb-4">
                 <i
