remove cdn tailwind from styles

--- a/public/precos.html
+++ b/public/precos.html
@@ -19,6 +19,8 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./assets/css/tailwind.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <!-- Dark Mode Styles -->
     <link rel="stylesheet" href="./assets/css/dark-mode-styles.css">
 
     <!-- Google Fonts -->
@@ -33,8 +35,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
     <!-- TailwindCSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./assets/js/tailwind.js"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
   </head>
 
   <body class="font-inter text-gray-900 overflow-x-hidden">
