--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,7 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r144/three.min.js"></script>
     <!-- TailwindCSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./assets/js/tailwind.js"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
     <!-- Structured Data -->
     <script type="application/ld+json">
