--- a/public/precos.html
+++ b/public/precos.html
@@ -63,7 +63,7 @@
             <a href="index.html"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Home</a>
             <a href="#pricing-content"
-              class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Preços</a>
+              class="bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
             <a href="#contato"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
             <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
@@ -91,7 +91,7 @@
             <a href="index.html"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Home</a>
             <a href="#pricing-content"
-              class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Preços</a>
+              class="block mx-3 mt-4 bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">Preços</a>
             <a href="#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
             <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
@@ -168,7 +168,7 @@
                 <span class="text-accent-400 text-2xl">🔄</span>
                 <div>
                   <h4 class="font-semibold text-lg">Mensalidade Baixíssima</h4>
-                  <p class="text-sm opacity-80">A partir de R$ 19/mês para
+                  <p class="text-sm opacity-80">A partir de R$ 15/mês para
                     manter</p>
                 </div>
               </div>
